samples/_failures_safe/1761426926_d6f38a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6cd54c41.c: In function ‘main’:
./samples/SAFE/__tmp_6cd54c41.c:169:9: error: expected expression at end of input
  169 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_6cd54c41.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6cd54c41.c:169:9: error: expected declaration or statement at end of input
